tests/parsing/smtlib/mcil/errors/278_check-system_assumption_bad_formula.mcil
(check-system s1 :assumption (a _))